--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_auth: ^4.12.0
   firebase_core: ^2.20.0
   cloud_firestore: ^4.12.1
+  google_fonts: ^6.1.0
+  stroke_text: ^0.0.2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
